crates/solidity/testing/snapshots/bindings_output/contracts/storage_layout_constant/generated/0.7.4-failure.txt
# This file is generated automatically by infrastructure scripts (crates/solidity/outputs/cargo/tests/src/bindings_output/runner.rs:37:18). Please don't edit by hand.

Parse errors:
Error: Expected IsKeyword or OpenBrace.
   ╭─[input.sol:3:1]
   │
 3 │ ╭─▶ contract X1 layout at C1 {
 4 │ ├─▶ }
   │ │       
   │ ╰─────── Error occurred here.
───╯
References and definitions: 
   ╭─[input.sol:1:1]
   │
 1 │ uint256 constant C1 = 0;
   │                  ─┬  
   │                   ╰── name: 1
───╯
Definiens: 
   ╭─[input.sol:1:1]
   │
 1 │ uint256 constant C1 = 0;
   │ ────────────┬────────────  
   │             ╰────────────── definiens: 1
───╯
